FIX: Hide scrollbars on Header due to recent change to jQuery layout [t19479]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@12933 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -1734,9 +1734,7 @@ a.BrowseRefresh{
     padding-left: 5px;
     }
 
-/* Workaround for MS Edge */
-@supports (-ms-ime-align: auto) {
-    #Header {
-        overflow: hidden;
-    }
+/* Fix scrollbars on Header */
+#Header {
+    overflow: hidden;
 }
